second commit avec animation du menu

--- a/Page-1/Ma_page_1.html
+++ b/Page-1/Ma_page_1.html
@@ -69,34 +69,33 @@
                 <img src="Images/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="La note enchantée" class="image">
                 <figcaption>
                     <h5>La note enchantée</h5>
-                    <div class="Folie-Méricourt">
-                        <p>Charome</p> 
-                        <a href="../Page-3/Ma_page_3.html"><i class="fa-regular fa-heart"></i></a>
-                    </div>
+                        <div class="Folie-Méricourt">
+                            <p>Charome</p>
+                            <a href="../Page-3/Ma_page_3.html"><i class="fa-regular fa-heart"></i></a>
+                        </div>
                 </figcaption>
             </div>
             <div class="restaurant_un">
                 <img src="Images/stil-u2Lp8tXIcjw-unsplash.jpg" alt="A la francaise" class="image3">
                 <figcaption>
                     <h5>A la francaise</h5>
-                    <div class="Folie-Méricourt">
-                        <p>Cité Rouge</p> 
-                        <a href="../Page-4/Ma_page_4.html"><i class="fa-regular fa-heart"></i></a>
-                    </div>
-                    </figcaption>
+                        <div class="Folie-Méricourt">
+                            <p>Cité Rouge</p> 
+                            <a href="../Page-4/Ma_page_4.html"><i class="fa-regular fa-heart"></i></a>
+                        </div>
+                </figcaption>
             </div>
             <div class="restaurant_un">
                 <img src="Images/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="Le délice des sens" class="image">
                 <figcaption>
                     <h5>Le délice des sens</h5>
-                    <div class="Folie-Méricourt">
-                        <p>Folie-Méricourt</p> 
-                        <a href="../Page-5/Ma_page_5.html"><i class="fa-regular fa-heart"></i></a>
-                    </div>
+                        <div class="Folie-Méricourt">
+                            <p>Méricourt</p> 
+                            <a href="../Page-5/Ma_page_5.html"><i class="fa-regular fa-heart"></i></a>
+                        </div>
                 </figcaption>
             </div>
         </div fin de restaurant>
-        </div>
     </main>
     <footer>
         <h2>Ohmyfood</h2>
