--- a/Page-3/Ma_page_3.html
+++ b/Page-3/Ma_page_3.html
@@ -18,102 +18,158 @@
     </header>
     <!--Finition de la partie header-->
 
+    <!--conception du contenu de main-->
     <main>
         <img src="Images/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="">
-        <h1>À la française  <i class="fa-regular fa-heart"></i></h1>
+        <h1>À la française <i class="fa-regular fa-heart"></i></h1>
         <div class="entree_plats_dessert">
             <div class="myfood">
                 <h4>ENTREES</h4>
                 <div class="ENTREES">
-                    <div class="ENTREES_Menu">
-                        <strong>Tartare de poulpe acidulé</strong>
-                        <div class="ENTREES_prix">
+                    <div class="menu">
+                        <div class="phrases">
+                            <strong>Tartare de poulpe acidulé</strong>
                             <p>Aux zestes d'orange</p>
-                            <p>25€</p>
+                        </div>
+                        <p class="prix">25€</p>
+                        <div class="animation">
+                            <div class="animation_icone">
+                                <i class="fa-check fas menu_icon"></i>
+                            </div>
                         </div>
                     </div>
-                    <div class="ENTREES_Menu">
-                        <strong>Velouté de légumes d'antan</strong>
-                        <div class="ENTREES_prix">
+                    <div class="menu">
+                        <div class="phrases">
+                            <strong>Velouté de légumes d'antan</strong>
                             <p>Carotte, panais, topinambour</p>
-                            <p>35€</p> 
+                        </div>
+                        <p class="prix">35€</p>
+                        <div class="animation">
+                            <div class="animation_icone">
+                                <i class="fa-check fas menu_icon"></i>
+                            </div>
                         </div>
                     </div>
-                    <div class="ENTREES_Menu">
-                        <strong>Soupe à l'oignon</strong>
-                        <div class="ENTREES_prix">
+                    <div class="menu">
+                        <div class="phrases">
+                            <strong>Soupe à l'oignon</strong>
                             <p>Revisitée</p>
-                            <p>20€</p>
-                        </div> 
+                        </div>
+                        <p class="prix">20€</p>
+                        <div class="animation">
+                            <div class="animation_icone">
+                                <i class="fa-check fas menu_icon"></i>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
             <div class="myfood">
                 <h4>PLATS</h4>
                 <div class="ENTREES">
-                    <div class="ENTREES_Menu">
-                        <strong>Pigeonneau d’Ille-et-Vilaine</strong>
-                        <div class="ENTREES_prix">
-                            <p>Sur son lit de gnocchis aux légumes</p>
-                            <p>44€</p>
-                        </div>
-                    </div>
-                    <div class="ENTREES_Menu">
-                        <strong>Coquilles Saint-Jacques</strong>
-                        <div class="ENTREES_prix">
+                    <div class="menu">
+                        <div class="phrases">
+                            <strong>Coquilles Saint-Jacques</strong>
                             <p>Accompagnées d'une purée de panais</p>
-                            <p>40€</p> 
+                        </div>
+                        <p class="prix">40€</p>
+                        <div class="animation">
+                            <div class="animation_icone">
+                                <i class="fa-check fas menu_icon"></i>
+                            </div>
                         </div>
                     </div>
-                    <div class="ENTREES_Menu">
-                        <strong>Magret de canard</strong>
-                        <div class="ENTREES_prix">
+                    <div class="menu">
+                        <div class="phrases">
+                            <strong>Magret de canard</strong>
                             <p>Et parmentier de pommes de terre</p>
-                            <p>44€</p>
-                        </div> 
+                        </div>
+                        <p class="prix">35€</p>
+                        <div class="animation">
+                            <div class="animation_icone">
+                                <i class="fa-check fas menu_icon"></i>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="menu">
+                        <div class="phrases">
+                            <strong>Pigeonneau d’Ille-et-Vilaine</strong>
+                            <p>Sur son lit de gnocchis aux légumes</p>
+                        </div>
+                        <p class="prix">44€</p>
+                        <div class="animation">
+                            <div class="animation_icone">
+                                <i class="fa-check fas menu_icon"></i>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
             <div class="myfood">
                 <h4>DESSERTS</h4>
                 <div class="ENTREES">
-                    <div class="ENTREES_Menu">
-                        <strong>Pétales de violettes glacés</strong>
-                        <div class="ENTREES_prix">
+                    <div class="menu">
+                        <div class="phrases">
+                            <strong>Pétales de violettes glacés</strong>
                             <p>Et purée de noisettes</p>
-                            <p>18€</p>
+                        </div>
+                        <p class="prix">18€</p>
+                        <div class="animation">
+                            <div class="animation_icone">
+                                <i class="fa-check fas menu_icon"></i>
+                            </div>
                         </div>
                     </div>
-                    <div class="ENTREES_Menu">
-                        <strong>Fondant au chocolat</strong>
-                        <div class="ENTREES_prix">
+                    <div class="menu">
+                        <div class="phrases">
+                            <strong>Fondant au chocolat</strong>
                             <p>Revisité</p>
-                            <p>22€</p> 
                         </div>
-                     </div>
-                    <div class="ENTREES_Menu">
-                        <strong>Millefeuille croustillant</strong>
-                        <div class="ENTREES_prix">
+                        <p class="prix">22€</p>
+                        <div class="animation">
+                            <div class="animation_icone">
+                                <i class="fa-check fas menu_icon"></i>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="menu">
+                        <div class="phrases">
+                            <strong>Millefeuille croustillant</strong>
                             <p>Myrtilles et pâte d’amande</p>
-                            <p>23€</p>
-                        </div> 
+                        </div>
+                        <p class="prix">23€</p>
+                        <div class="animation">
+                            <div class="animation_icone">
+                                <i class="fa-check fas menu_icon"></i>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
-    <div class="commande">
-        <h3>Commander</h3>
-    </div>
+        <!-- finition de la partie main -->
+
+        <!-- realisation du bouton de commande -->
+        <div class="commande">
+            <h3>Commander</h3>
+        </div>
+        <!-- fin de la partie commande -->
+
     </main>
+    <!-- finition de la partie main -->
+
+    <!-- conception du footer -->
     <footer>
         <h2>Ohmyfood</h2>
         <div class="foot">
-            <i class="fa-solid fa-utensils"></i> 
+            <i class="fa-solid fa-utensils"></i>
             Proposer un restaurant<br>
-            <i class="fa-regular fa-handshake"></i> 
+            <i class="fa-regular fa-handshake"></i>
             Dévenir partenaire
-        <p>Mentions légales</p>
-        <p>Contact</p>
+            <p>Mentions légales</p>
+            <p>Contact</p>
         </div>
     </footer>
+    <!-- finition du footer -->
+
 </body>
