--- a/Page-5/Ma_page_5.html
+++ b/Page-5/Ma_page_5.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Oh my food5!-Accueil</title>
+    <title>Oh my food4!-Accueil</title>
     <meta charset="UTF-8">
     <link rel="shortcut icon" type="logo/svp" href="Logos/ohmyfood@2x.svg">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -17,91 +17,137 @@
         <h1>Ohmyfood</h1>
     </header>
     <!--Finition de la partie header-->
-    
-    <!--conception du contenu de main  -->
+
+    <!--conception du contenu de main-->
     <main>
         <img src="Images/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="">
-        <h1>Le délice des sens  <i class="fa-regular fa-heart"></i></h1>
+        <h1>Le délice des sens <i class="fa-regular fa-heart"></i></h1>
         <div class="entree_plats_dessert">
             <div class="myfood">
                 <h4>ENTREES</h4>
                 <div class="ENTREES">
-                    <div class="ENTREES_Menu">
-                        <strong>Tartare de thont</strong>
-                        <div class="ENTREES_prix">
+                    <div class="menu">
+                        <div class="phrases">
+                            <strong>Tartare de thon</strong>
                             <p>Assaisonné au yuzu</p>
-                            <p>25€</p>
+                        </div>
+                        <p class="prix">25€</p>
+                        <div class="animation">
+                            <div class="animation_icone">
+                                <i class="fa-check fas menu_icon"></i>
+                            </div>
                         </div>
                     </div>
-                    <div class="ENTREES_Menu">
-                        <strong>Bouchée de homard croustillant</strong>
-                        <div class="ENTREES_prix">
+                    <div class="menu">
+                        <div class="phrases">
+                            <strong>Bouchée de homard croustillant</strong>
                             <p>Et sa farandole de petits légumes</p>
-                            <p>35€</p> 
+                        </div>
+                        <p class="prix">35€</p>
+                        <div class="animation">
+                            <div class="animation_icone">
+                                <i class="fa-check fas menu_icon"></i>
+                            </div>
                         </div>
                     </div>
-                    <div class="ENTREES_Menu">
-                        <strong>Velouté de cèpes</strong>
-                        <div class="ENTREES_prix">
+                    <div class="menu">
+                        <div class="phrases">
+                            <strong>Velouté de cèpes</strong>
                             <p>Aux truffes</p>
-                            <p>20€</p>
-                        </div> 
+                        </div>
+                        <p class="prix">20€</p>
+                        <div class="animation">
+                            <div class="animation_icone">
+                                <i class="fa-check fas menu_icon"></i>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
             <div class="myfood">
                 <h4>PLATS</h4>
                 <div class="ENTREES">
-                    <div class="ENTREES_Menu">
-                        <strong>Poulet rôti aux herbes de Provence</strong>
-                        <div class="ENTREES_prix">
+                    <div class="menu">
+                        <div class="phrases">
+                            <strong>Poulet rôti aux herbes de Provence</strong>
                             <p>Et sa crème de truffe</p>
-                            <p>40€</p>
+                        </div>
+                        <p class="prix">40€</p>
+                        <div class="animation">
+                            <div class="animation_icone">
+                                <i class="fa-check fas menu_icon"></i>
+                            </div>
                         </div>
                     </div>
-                    <div class="ENTREES_Menu">
-                        <strong>Langouste rôtie</strong>
-                        <div class="ENTREES_prix">
+                    <div class="menu">
+                        <div class="phrases">
+                            <strong>Langouste rôtie</strong>
                             <p>Et ses légumes de saison</p>
-                            <p>35€</p> 
+                        </div>
+                        <p class="prix">35€</p>
+                        <div class="animation">
+                            <div class="animation_icone">
+                                <i class="fa-check fas menu_icon"></i>
+                            </div>
                         </div>
                     </div>
-                    <div class="ENTREES_Menu">
-                        <strong>Côte de boeuf Angus</strong>
-                        <div class="ENTREES_prix">
+                    <div class="menu">
+                        <div class="phrases">
+                            <strong>Côte de boeuf Angus</strong>
                             <p>Et sa purée de panais</p>
-                            <p>44€</p>
-                        </div> 
+                        </div>
+                        <p class="prix">44€</p>
+                        <div class="animation">
+                            <div class="animation_icone">
+                                <i class="fa-check fas menu_icon"></i>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
             <div class="myfood">
                 <h4>DESSERTS</h4>
                 <div class="ENTREES">
-                    <div class="ENTREES_Menu">
-                        <strong>Farandole de desserts</strong>
-                        <div class="ENTREES_prix">
+                    <div class="menu">
+                        <div class="phrases">
+                            <strong>Farandole de desserts</strong>
                             <p>Du chef</p>
-                            <p>18€</p>
+                        </div>
+                        <p class="prix">18€</p>
+                        <div class="animation">
+                            <div class="animation_icone">
+                                <i class="fa-check fas menu_icon"></i>
+                            </div>
                         </div>
                     </div>
-                    <div class="ENTREES_Menu">
-                        <strong>Crème brulée</strong>
-                        <div class="ENTREES_prix">
-                            <p>Revisitée</p>
-                            <p>22€</p> 
+                    <div class="menu">
+                        <div class="phrases">
+                            <strong>Crème brulée</strong>
+                            <p>Revisité</p>
+                        </div>
+                        <p class="prix">22€</p>
+                        <div class="animation">
+                            <div class="animation_icone">
+                                <i class="fa-check fas menu_icon"></i>
+                            </div>
                         </div>
                     </div>
-                    <div class="ENTREES_Menu">
-                        <strong>Tiramisu</strong>
-                        <div class="ENTREES_prix">
+                    <div class="menu">
+                        <div class="phrases">
+                            <strong>Tiramisu</strong>
                             <p>À la noisette</p>
-                            <p>23€</p>
-                        </div> 
+                        </div>
+                        <p class="prix">23€</p>
+                        <div class="animation">
+                            <div class="animation_icone">
+                                <i class="fa-check fas menu_icon"></i>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
+        <!-- finition de la partie main -->
 
         <!-- realisation du bouton de commande -->
         <div class="commande">
@@ -116,13 +162,14 @@
     <footer>
         <h2>Ohmyfood</h2>
         <div class="foot">
-            <i class="fa-solid fa-utensils"></i> 
+            <i class="fa-solid fa-utensils"></i>
             Proposer un restaurant<br>
-            <i class="fa-regular fa-handshake"></i> 
+            <i class="fa-regular fa-handshake"></i>
             Dévenir partenaire
             <p>Mentions légales</p>
             <p>Contact</p>
         </div>
     </footer>
     <!-- finition du footer -->
+
 </body>
