--- a/Page-2/Ma_page_2.html
+++ b/Page-2/Ma_page_2.html
@@ -18,7 +18,7 @@
     </header>
     <!--Finition de la partie header-->
 
-    <!--conception du contenu de main  -->
+    <!--conception du contenu de main-->
     <main>
         <img src="Images/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="">
         <h1>La palette du goût <i class="fa-regular fa-heart"></i></h1>
@@ -26,51 +26,81 @@
             <div class="myfood">
                 <h4>ENTREES</h4>
                 <div class="ENTREES">
-                    <div class="ENTREES_Menu">
-                        <strong>Fricassée d'escargot</strong>
-                        <div class="ENTREES_prix">
+                    <div class="menu">
+                        <div class="phrases">
+                            <strong>Fricassée d'escargot</strong>
                             <p>Au piment d'Espelette</p>
-                            <p>25€</p>
                         </div>
-                    </div>    
-                    <div class="ENTREES_Menu">
-                        <strong>Foie gras de canard mi-cuit</strong>
-                        <div class="ENTREES_prix">
+                        <p class="prix">25€</p>
+                        <div class="animation">
+                            <div class="animation_icone">
+                                <i class="fa-check fas menu_icon"></i>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="menu">
+                        <div class="phrases">
+                            <strong>Foie gras de canard mi-cuit</strong>
                             <p>Et ses copeaux de truffe noire</p>
-                            <p>35€</p>
+                        </div>
+                        <p class="prix">35€</p>
+                        <div class="animation">
+                            <div class="animation_icone">
+                                <i class="fa-check fas menu_icon"></i>
+                            </div>
                         </div>
                     </div>
-                    <div class="ENTREES_Menu">
-                        <strong>Œuf au plat</strong>
-                        <div class="ENTREES_prix">
+                    <div class="menu">
+                        <div class="phrases">
+                            <strong>Œuf au plat</strong>
                             <p>Assaisonné à la truffe sur lit de caviar</p>
-                            <p>20€</p>
+                        </div>
+                        <p class="prix">20€</p>
+                        <div class="animation">
+                            <div class="animation_icone">
+                                <i class="fa-check fas menu_icon"></i>
+                            </div>
                         </div>
                     </div>
-                </div>    
+                </div>
             </div>
             <div class="myfood">
                 <h4>PLATS</h4>
                 <div class="ENTREES">
-                    <div class="ENTREES_Menu">
-                        <strong>Filet de boeuf aux herbes</strong>
-                        <div class="ENTREES_prix">
+                    <div class="menu">
+                        <div class="phrases">
+                            <strong>Filet de boeuf aux herbes</strong>
                             <p>Accompagné de sa ribambelle de légumes</p>
-                            <p>40€</p>
+                        </div>
+                        <p class="prix">40€</p>
+                        <div class="animation">
+                            <div class="animation_icone">
+                                <i class="fa-check fas menu_icon"></i>
+                            </div>
                         </div>
                     </div>
-                    <div class="ENTREES_Menu">
-                        <strong>Parmentier de queue de boeuf</strong>
-                        <div class="ENTREES_prix">
+                    <div class="menu">
+                        <div class="phrases">
+                            <strong>Parmentier de queue de boeuf</strong>
                             <p>À la truffe noire sur sa purée de panais</p>
-                            <p>35€</p>
+                        </div>
+                        <p class="prix">35€</p>
+                        <div class="animation">
+                            <div class="animation_icone">
+                                <i class="fa-check fas menu_icon"></i>
+                            </div>
                         </div>
                     </div>
-                    <div class="ENTREES_Menu">
-                        <strong>À la truffe noire sur sa purée de panais</strong>
-                        <div class="ENTREES_prix">
+                    <div class="menu">
+                        <div class="phrases">
+                            <strong>Filet de turbot</strong>
                             <p>Aux agrumes</p>
-                            <p>44€</p>
+                        </div>
+                        <p class="prix">44€</p>
+                        <div class="animation">
+                            <div class="animation_icone">
+                                <i class="fa-check fas menu_icon"></i>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -78,30 +108,46 @@
             <div class="myfood">
                 <h4>DESSERTS</h4>
                 <div class="ENTREES">
-                    <div class="ENTREES_Menu">
-                        <strong>Paris-Brest</strong>
-                        <div class="ENTREES_prix">
+                    <div class="menu">
+                        <div class="phrases">
+                            <strong>Paris-Brest</strong>
                             <p>Revisité</p>
-                            <p>18€</p>
+                        </div>
+                        <p class="prix">18€</p>
+                        <div class="animation">
+                            <div class="animation_icone">
+                                <i class="fa-check fas menu_icon"></i>
+                            </div>
                         </div>
                     </div>
-                    <div class="ENTREES_Menu">
-                        <strong>Macaron au chocolat d'exception</strong>
-                        <div class="ENTREES_prix">
+                    <div class="menu">
+                        <div class="phrases">
+                            <strong>Macaron au chocolat d'exception</strong>
                             <p>Et glace à la vanille de Madagascar</p>
-                            <p>22€</p>
+                        </div>
+                        <p class="prix">22€</p>
+                        <div class="animation">
+                            <div class="animation_icone">
+                                <i class="fa-check fas menu_icon"></i>
+                            </div>
                         </div>
                     </div>
-                    <div class="ENTREES_Menu">
-                        <strong>Mousse au chocolat</strong>
-                        <div class="ENTREES_prix">
+                    <div class="menu">
+                        <div class="phrases">
+                            <strong>Mousse au chocolat</strong>
                             <p>Au piment d'Espelette et à la truffe noire</p>
-                            <p>23€</p>
+                        </div>
+                        <p class="prix">23€</p>
+                        <div class="animation">
+                            <div class="animation_icone">
+                                <i class="fa-check fas menu_icon"></i>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
+        <!-- finition de la partie main -->
 
         <!-- realisation du bouton de commande -->
         <div class="commande">
