--- a/Page-4/Ma_page_4.html
+++ b/Page-4/Ma_page_4.html
@@ -18,96 +18,148 @@
     </header>
     <!--Finition de la partie header-->
 
+    <!--conception du contenu de main-->
     <main>
         <img src="Images/stil-u2Lp8tXIcjw-unsplash.jpg" alt="">
-        <h1>La note enchantée  <i class="fa-regular fa-heart"></i></h1>
+        <h1>La note enchantée <i class="fa-regular fa-heart"></i></h1>
         <div class="entree_plats_dessert">
             <div class="myfood">
                 <h4>ENTREES</h4>
                 <div class="ENTREES">
-                    <div class="ENTREES_Menu">
-                        <strong>Ravioles de foie gras</strong>
-                        <div class="ENTREES_prix">
+                    <div class="menu">
+                        <div class="phrases">
+                            <strong>Ravioles de foie gras </strong>
                             <p>Accompagnés de leur crème à la truffe</p>
-                            <p>25€</p>
+                        </div>
+                        <p class="prix">25€</p>
+                        <div class="animation">
+                            <div class="animation_icone">
+                                <i class="fa-check fas menu_icon"></i>
+                            </div>
                         </div>
                     </div>
-                    <div class="ENTREES_Menu">
-                        <strong>Caviar osciètre</strong>
-                        <div class="ENTREES_prix">
+                    <div class="menu">
+                        <div class="phrases">
+                            <strong>Caviar osciètre</strong>
                             <p>Sur blini à la farine de blé noir</p>
-                            <p>35€</p> 
+                        </div>
+                        <p class="prix">35€</p>
+                        <div class="animation">
+                            <div class="animation_icone">
+                                <i class="fa-check fas menu_icon"></i>
+                            </div>
                         </div>
                     </div>
-                    <div class="ENTREES_Menu">
-                        <strong>Homard et espuma de potiron</strong>
-                        <div class="ENTREES_prix">
+                    <div class="menu">
+                        <div class="phrases">
+                            <strong>Homard et espuma de potiron</strong>
                             <p>Mariné aux zestes d'orange</p>
-                            <p>20€</p>
-                        </div> 
+                        </div>
+                        <p class="prix">20€</p>
+                        <div class="animation">
+                            <div class="animation_icone">
+                                <i class="fa-check fas menu_icon"></i>
+                            </div>
+                        </div>
                     </div>
-                    <div class="ENTREES_Menu">
-                        <strong>Foie gras de canard cuit entier</strong>
-                        <div class="ENTREES_prix">
+                    <div class="menu">
+                        <div class="phrases">
+                            <strong>Foie gras de canard cuit entier</strong>
                             <p>Confiture de figue et pain toasté</p>
-                            <p>35€</p>
-                        </div> 
+                        </div>
+                        <p class="prix">35€</p>
+                        <div class="animation">
+                            <div class="animation_icone">
+                                <i class="fa-check fas menu_icon"></i>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
             <div class="myfood">
                 <h4>PLATS</h4>
                 <div class="ENTREES">
-                    <div class="ENTREES_Menu">
-                        <strong>Noix de coquilles Saint-Jacques</strong>
-                        <div class="ENTREES_prix">
+                    <div class="menu">
+                        <div class="phrases">
+                            <strong>Noix de coquilles Saint-Jacques</strong>
                             <p>Sur lit de purée de céleri-rave</p>
-                            <p>40€</p>
+                        </div>
+                        <p class="prix">40€</p>
+                        <div class="animation">
+                            <div class="animation_icone">
+                                <i class="fa-check fas menu_icon"></i>
+                            </div>
                         </div>
                     </div>
-                    <div class="ENTREES_Menu">
-                        <strong>Langoustine poêlée</strong>
-                        <div class="ENTREES_prix">
+                    <div class="menu">
+                        <div class="phrases">
+                            <strong>Langoustine poêlée</strong>
                             <p>Purée de patate douce</p>
-                            <p>35€</p> 
+                        </div>
+                        <p class="prix">35€</p>
+                        <div class="animation">
+                            <div class="animation_icone">
+                                <i class="fa-check fas menu_icon"></i>
+                            </div>
                         </div>
                     </div>
-                    <div class="ENTREES_Menu">
-                        <strong>Mijoté de queue de boeuf</strong>
-                        <div class="ENTREES_prix">
+                    <div class="menu">
+                        <div class="phrases">
+                            <strong>Mijoté de queue de boeuf</strong>
                             <p>Et riz sauvage aux zestes de citron</p>
-                            <p>44€</p>
-                        </div> 
+                        </div>
+                        <p class="prix">44€</p>
+                        <div class="animation">
+                            <div class="animation_icone">
+                                <i class="fa-check fas menu_icon"></i>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
             <div class="myfood">
                 <h4>DESSERTS</h4>
                 <div class="ENTREES">
-                    <div class="ENTREES_Menu">
-                        <strong>Macaron noisette et chocolat</strong>
-                        <div class="ENTREES_prix">
+                    <div class="menu">
+                        <div class="phrases">
+                            <strong>Macaron noisette et chocolat</strong>
                             <p>Glace au caramel brun et sel de Guérande</p>
-                            <p>18€</p>
+                        </div>
+                        <p class="prix">18€</p>
+                        <div class="animation">
+                            <div class="animation_icone">
+                                <i class="fa-check fas menu_icon"></i>
+                            </div>
                         </div>
                     </div>
-                    <div class="ENTREES_Menu">
-                        <strong>Baba au rhum revisité </strong>
-                        <div class="ENTREES_prix">
+                    <div class="menu">
+                        <div class="phrases">
+                            <strong>Baba au rhum revisité</strong>
                             <p>Avec son coulis de citron</p>
-                            <p>22€</p> 
+                        </div>
+                        <p class="prix">22€</p>
+                        <div class="animation">
+                            <div class="animation_icone">
+                                <i class="fa-check fas menu_icon"></i>
+                            </div>
                         </div>
                     </div>
-                    <div class="ENTREES_Menu">
-                        <strong>Tarte au citron meringuée</strong>
-                        <div class="ENTREES_prix">
+                    <div class="menu">
+                        <div class="phrases">
+                            <strong>Tarte au citron meringuée</strong>
                             <p>Déstructurée</p>
-                            <p>23€</p>
-                        </div> 
+                        </div>
+                        <p class="prix">23€</p>
+                        <div class="animation">
+                            <div class="animation_icone">
+                                <i class="fa-check fas menu_icon"></i>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
+        <!-- finition de la partie main -->
 
         <!-- realisation du bouton de commande -->
         <div class="commande">
@@ -122,13 +174,14 @@
     <footer>
         <h2>Ohmyfood</h2>
         <div class="foot">
-            <i class="fa-solid fa-utensils"></i> 
+            <i class="fa-solid fa-utensils"></i>
             Proposer un restaurant<br>
-            <i class="fa-regular fa-handshake"></i> 
+            <i class="fa-regular fa-handshake"></i>
             Dévenir partenaire
             <p>Mentions légales</p>
             <p>Contact</p>
         </div>
     </footer>
     <!-- finition du footer -->
+
 </body>
